# rust-mame-launcher

./: .gitignore  CHANGELOG.md  Cargo.toml  Cargo.toml.backup  Cargo.toml.rej  LICENSE  PKGBUILD  README.MD  apply-multi-mame-patch.sh  build-release.sh  install.sh  multi-mame-support.patch  uninstall.sh
akatana/: game
github/workflows/: build.yml
src/: app.rs  config.rs  graphics_presets.rs  main.rs  main.rs.old  mame_utils.rs  models.rs  rom_utils.rs
src/rust-mame-launcher-0.1.0/: Cargo.toml  README.md  rust-mame-launcher.desktop
src/ui/: app_ui.rs  artwork_panel.rs  dialogs.rs  menu_bar.rs  mod.rs  status_bar.rs
src/ui/rom_list/: filters.rs  launch.rs  mod.rs  sorting.rs  status.rs  table.rs  table_header.rs  table_row.rs
